More contrast to the orange color and bugfix on the overtime flag

--- a/htdocs/css/screen.css
+++ b/htdocs/css/screen.css
@@ -502,7 +502,7 @@ a:hover, a.active, input[type="submit"]:hover, input[type="reset"]:hover {
 }
 /* line 204, ../sass/style.scss */
 .overtime.checked_in .beveled-bg {
-  background: linear-gradient(210deg, transparent 30px, #dd7000 20px);
+  background: linear-gradient(210deg, transparent 30px, #cc6000 20px);
 }
 /* line 205, ../sass/style.scss */
 .overtime_absolute.checked_in .beveled-bg {
@@ -557,7 +557,7 @@ strong {
 }
 /* line 232, ../sass/style.scss */
 .overtime.checked_in .has_back, .overtime.checked_in #content #punches table.inputs tr:hover, #content #punches table.inputs .overtime.checked_in tr:hover, .overtime.checked_in a:hover, .overtime.checked_in a.active, .overtime.checked_in input[type="submit"]:hover, .overtime.checked_in input[type="reset"]:hover {
-  background: #DD7000 !important;
+  background: #CC6000 !important;
 }
 /* line 233, ../sass/style.scss */
 .overtime_absolute.checked_in .has_back, .overtime_absolute.checked_in #content #punches table.inputs tr:hover, #content #punches table.inputs .overtime_absolute.checked_in tr:hover, .overtime_absolute.checked_in a:hover, .overtime_absolute.checked_in a.active, .overtime_absolute.checked_in input[type="submit"]:hover, .overtime_absolute.checked_in input[type="reset"]:hover {
