--- a/htdocs/sass/style.scss
+++ b/htdocs/sass/style.scss
@@ -201,7 +201,7 @@ a:hover, a.active, input[type="submit"]:hover, input[type="reset"]:hover {
     padding: 8px 5px;
     color: white;
     
-    .overtime.checked_in & { background:linear-gradient(210deg, transparent 30px, #DD7000 20px);}
+    .overtime.checked_in & { background:linear-gradient(210deg, transparent 30px, #CC6000 20px);}
     .overtime_absolute.checked_in & { background:linear-gradient(210deg, transparent 30px, #BB0000 20px);}
 }
 
@@ -229,6 +229,6 @@ strong {
 .has_back {
     background: #0062A8 !important;
     .checked_in & { background: #0062A8 !important;}
-    .overtime.checked_in & { background: #DD7000 !important;}
+    .overtime.checked_in & { background: #CC6000 !important;}
     .overtime_absolute.checked_in & { background: #BB0000 !important;}
 }
